z-index fixes

--- a/gui/src/components/Chatroom/Chatroom.module.scss
+++ b/gui/src/components/Chatroom/Chatroom.module.scss
@@ -8,6 +8,9 @@
   display: flex;
   flex-direction: column;
   z-index: 40;
+  &.maximized {
+    z-index: 100;
+  }
   .chatroom-header {
     display: flex;
     flex-direction: row;
